# tou-schedule-editor

./: .env.local  .env.local.example  .gitignore  AGENTS.md  App.tsx  CHEATSHEET.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_WORKERS_PYTHON.md  DEPLOYMENT_GUIDE.md  DEPLOY_COMMANDS.md  DEPLOY_COMPLETE.md  DEPLOY_EXECUTE.md  DEPLOY_SOLUTION.md  DEPLOY_STATUS.md  DEPLOY_SUCCESS.md  DEPLOY_SUMMARY.txt  DEPLOY_TROUBLESHOOTING.md  DEPLOY_WORKERS_READY.md  Dockerfile  EXECUTE_NOW.md  MANUAL_DEPLOY.md  RAILWAY_DEPLOY.md  RAILWAY_MCP_GUIDE.md  README-DEPLOYMENT.md  SSL_FIX.md  SUPABASE_DEPLOY.md  TODO-CloudSync-Phase3-4.md  TODO-Cloudflare-cycles-fix-2026-02-14_01-30.md  WINDOWS_EXEC_FIX.md  WRANGLER_FIX.md  api.ts  backendCapabilities.ts  cloudSyncApi.ts  cloudSyncManager.ts  constants.ts  deploy-backend.sh  deploy-cf-workers.sh  deploy-cloud-en.bat  deploy-cloud.bat  deploy-cloud.sh  (+33 more)
.agent/: agent.md
.claude/: deploy-config.md  settings.local.json
backend/: __init__.py  app.py  requirements-desktop.txt  requirements.txt
components/: BatchCapacityChart.tsx  DateRuleManager.tsx  DateRuleModal.tsx  EnergyMatrixPage.tsx  ErrorBoundary.tsx  LoadAnalysisPage.tsx  MonthlyLoadPriceOverlayChart.tsx  MonthlySummaryTable.tsx  ProjectDatasetsPage.tsx  QualityReportPage.tsx  QualityReportPanel.tsx  ReportCenterPage.tsx  StorageEconomicsPage.tsx  StorageProfitPage.tsx  SyncSettingsModal.tsx
docs/: Python_JS_Calculation_Alignment_Report.md  cloudflare_access_认证配置指南.md  (+6 more)
workers-backend/: README.md  cf-requirements.txt  pyproject.toml  wrangler.toml
workers-backend/src/: entry.py
(+108 files in other folders)
