[project]
name = "tou-schedule-backend"
version = "0.1.0"
description = "TOU Schedule Editor Backend on Cloudflare Workers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

# 可选的开发依赖，仅用于本地开发
[dependency-groups]
dev = [
    "workers-py",
]
